# microquad

hw/quad_v0/gerber/: minidrone-B_Cu.gbr  minidrone-B_Mask.gbr  minidrone-B_Paste.gbr  minidrone-B_Silkscreen.gbr  minidrone-Edge_Cuts.gbr  minidrone-F_Cu.gbr  minidrone-F_Mask.gbr  minidrone-F_Paste.gbr  minidrone-F_Silkscreen.gbr  minidrone-In1_Cu.gbr  minidrone-In2_Cu.gbr  minidrone-NPTH.drl  minidrone-PTH.drl
hw/quad_v0/kicad/: _autosave-minidrone.kicad_sch  minidrone.kicad_pcb  minidrone.kicad_prl  minidrone.kicad_pro  motor_controller.kicad_sch
test/ros2_ws/src/thrust_publisher/: CMakeLists.txt  package.xml
test/ros2_ws/src/thrust_publisher/src/: thrust_pub.cpp
