<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>thrust_publisher</name>
  <version>0.0.0</version>
  <description>Reads weight sensor and publishes calibrated thrust from quad</description>
  <maintainer email="sheikmasta@gmail.com">workshop</maintainer>
  <license>No License Provided</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
